--- a/class05/class05/relaxr/css/style.css
+++ b/class05/class05/relaxr/css/style.css
@@ -30,14 +30,21 @@
 /* BASE STYLES
 /*******************************************/
 
+
 body {
+  background-color:#cccccc;
   color: #000;
   font-size: 55px;
   line-height: 1.4;
   font-family: 'Open Sans', sans-serif;
 }
 
-
+#paragraph1:first-letter{
+  font-size:200%;
+}
+#paragraph2:first-letter{
+  font-size:200%;
+}
 /******************************************
 /* LAYOUT
 /*******************************************/
@@ -46,20 +53,87 @@ body {
 #container {
   width: 960px;
   margin: auto;
+  background-color:#e6e6e6;
+  overflow:hidden;
+  padding: 0px 40px 30px 0px;
 }
 
 header {
+  background-color:#003366;
+  width:100%;
 
 }
+
+#main-text{
+  float:left;
+  width:600px;
+}
+
 
 footer {
+  clear:both;
+  padding-left:400px;
+  padding-top:100px;
+  background-color:#4d4d4d;
 
 }
+
+.sidebar{
+  float:right;
+  width:200px;
+}
+
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
+h2{
+  font-weight:bold;
+  font-size:30px;
+}
 
+body{
+  font-weight:light;
+  font-size:24px;
+}
 
+a{
+  color:yellow;
+  padding:20px 10px 20px 10px;
+}
 
+nav{
+  padding:15px 0px 10px 0px;
+}
+
+main{
+  padding:20px 20px 20px 20px;
+}
+
+.read-more{
+  font-size:24px;
+  float:right;
+  font-weight:medium;
+  margin-bottom:10px;
+}
+
+button{
+  padding:10px;
+  margin-left:400px;
+  margin-bottom:20px;
+}
+
+/*SIDEBAR STYLES*/
+
+#categories{
+  float:right;
+}
+
+#about-relaxr{
+  float:right;
+}
+
+.nav{
+  display:block;
+}
